Refactored endpoint to get user assignedto a team
