# src/controllers/team_controller.ts
@@ -12,9 +12,9 @@ export class TeamController extends Controller {
   }
 
   @Response<GetTaskError>('default', 'you are not in a team')
-  @SuccessResponse(200, 'fetch task successful')
+  @SuccessResponse(200, 'fetch team successful')
   @Get('{userId}')
-  public async getTask(@Path() userId: string) {
+  public async getTeam(@Path() userId: string) {
     const teamData = await this.teamService.getTeamData(userId);
     this.setStatus(200);
     return teamData;
